# cookiecutter-pyxu

./: .gitignore  PROMPTS.md  README.md  cookiecutter.json  todo.txt
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_create_template.py
{{cookiecutter.plugin_name}}/: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.plugin_name}}/.github/workflows/: test_and_deploy.yml
{{cookiecutter.plugin_name}}/.pycsou-fair/: DESCRIPTION.md  config.yml
{{cookiecutter.plugin_name}}/doc/: conf.py  index.rst
{{cookiecutter.plugin_name}}/doc/_templates/: navbar-version.html  sphinx_chatgpt.html
{{cookiecutter.plugin_name}}/doc/api/: index.rst  operator.rst  opt.solver.rst  opt.stop.rst
{{cookiecutter.plugin_name}}/doc/examples/: example_gd.ipynb  index.rst  placeholder.ipynb
{{cookiecutter.plugin_name}}/doc/guide/: index.rst
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/: __init__.py  _math.py  _operator.py  _solver.py  _stop.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/_tests/: test_math.py  test_operator.py  test_solver.py  test_stop.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/contrib/data/: __init__.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/math/: __init__.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/operator/: __init__.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/operator/func/: __init__.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/operator/linop/: __init__.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/opt/: __init__.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/opt/solver/: __init__.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/opt/stop/: __init__.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}_tests/: test_math.py  test_operator.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}_tests/test_contrib/: test_data.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}_tests/test_operator/: test_func.py  test_linop.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}_tests/test_opt/: test_solver.py  test_stop.py
